# A2A

samples/python/: pyproject.toml
samples/python/agents/.clinerules/: development-workflow.md
samples/python/agents/docstring_audit_agent_adk/: __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/agents/memory-bank/: raw_reflection_log.md
samples/python/common/server/: server.py
